[package]
name = "cyber-data-loader"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
foxglove = { version = "0.9.1", default-features = false, features = ["derive", "lz4", "schemars", "zstd"] }
foxglove_data_loader = "0.1.0"
prost = "0.13.5"
prost-types = "0.13.5"   # 如果使用 google.protobuf.Timestamp 等
lz4_flex = "0.11"
zstd = "0.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bzip2 = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bzip2-rs = "0.1"

[build-dependencies]
prost-build = "0.13.5"
